--- a/cs336_alignment/interact.ipynb
+++ b/cs336_alignment/interact.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 86,
    "id": "72100bdc",
    "metadata": {},
    "outputs": [],
@@ -69,8 +69,8 @@
     "correct_dict_list = []\n",
     "for i in correct:\n",
     "    correct_dict = {}\n",
-    "    correct_dict[\"question\"] = i[\"prompt\"].split(\"User: \")[-1].split(\"Assistant\")[0]\n",
-    "    correct_dict[\"answer\"] = i[\"answer\"]\n",
+    "    correct_dict[\"question\"] = i[\"prompt\"]\n",
+    "    correct_dict[\"response\"] = i[\"response\"]\n",
     "    correct_dict_list.append(correct_dict)\n",
     "\n",
     "with open(\"/home/aiscuser/repos/assignment5-alignment/data/gsm8k/train_correct.jsonl\", \"w\") as f:\n",
