--- a/cs336_alignment/interact.ipynb
+++ b/cs336_alignment/interact.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "id": "72100bdc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
     "correct_dict_list = []\n",
     "for i in correct:\n",
     "    correct_dict = {}\n",
-    "    correct_dict[\"question\"] = i[\"prompt\"]\n",
+    "    correct_dict[\"prompt\"] = i[\"prompt\"]\n",
     "    correct_dict[\"response\"] = i[\"response\"]\n",
     "    correct_dict_list.append(correct_dict)\n",
     "\n",
@@ -77,6 +77,79 @@
     "    for i in correct_dict_list:\n",
     "        json.dump(i, f)\n",
     "        f.write(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "5c7cbf1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct_prompt = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "b15a555b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/home/aiscuser/repos/assignment5-alignment/data/gsm8k/train_correct.jsonl\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    for line in f:\n",
+    "        line = json.loads(line.strip())\n",
+    "        prompt = line[\"prompt\"]\n",
+    "        correct_prompt.add(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "a5eef927",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct = []\n",
+    "with open(\"/home/aiscuser/repos/assignment5-alignment/data/gsm8k/processed_train.jsonl\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    for line in f:\n",
+    "        line = json.loads(line.strip())\n",
+    "        if line[\"prompt\"] in correct_prompt:\n",
+    "            correct_dict = {}\n",
+    "            correct_dict[\"prompt\"] = line[\"prompt\"]\n",
+    "            correct_dict[\"response\"] = line[\"response\"]\n",
+    "            correct.append(correct_dict)\n",
+    "with open(\"/home/aiscuser/repos/assignment5-alignment/data/gsm8k/correct.jsonl\", \"w\") as f:\n",
+    "    for i in correct:\n",
+    "        json.dump(i, f)\n",
+    "        f.write(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "d14be574",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_train = []\n",
+    "with open(\"/home/aiscuser/repos/assignment5-alignment/cs336_alignment/prompts/r1_zero.prompt\", \"r\") as file:\n",
+    "    prompt = file.read()\n",
+    "with open(\"/home/aiscuser/repos/assignment5-alignment/data/gsm8k/train.jsonl\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    for line in f:\n",
+    "        train_sample = {}\n",
+    "        line = json.loads(line)\n",
+    "        train_sample[\"prompt\"] = prompt.format(question = line[\"question\"])\n",
+    "        train_sample[\"response\"] = line[\"answer\"].replace(\"\\n####\", \" </think> <answer>\") + \" </answer>\"\n",
+    "        processed_train.append(train_sample)\n",
+    "\n",
+    "with open(\"/home/aiscuser/repos/assignment5-alignment/data/gsm8k/processed_train.jsonl\", \"w\") as f:\n",
+    "    for i in processed_train:\n",
+    "        json.dump(i, f)\n",
+    "        f.write(\"\\n\")\n",
+    "\n",
+    "    \n",
+    "        \n"
    ]
   },
   {
@@ -548,6 +621,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6b1ca4d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open (\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "id": "7b79bf33",
    "metadata": {},
@@ -719,8 +802,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "fcc11c5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = torch.randn(3,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "d0690719",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-1.5766, -0.4595,  0.9613])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "e171345f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = torch.randn(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "1fc0f050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0.4149, -2.0955,  1.3975,  1.4119, -1.4094])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "f84daa71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-1.5766, -0.4595,  0.9613,  0.4149, -2.0955,  1.3975,  1.4119, -1.4094])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([t1, t2], dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a4ae51",
    "metadata": {},
    "outputs": [],
    "source": []
