--- a/cs336_alignment/interact.ipynb
+++ b/cs336_alignment/interact.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "cb5439f9",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "8cae8778",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
+   "id": "95c1fd3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d14be574",
    "metadata": {},
    "outputs": [],
@@ -894,7 +904,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "weather",
+   "display_name": "vllm3",
    "language": "python",
    "name": "python3"
   },
@@ -908,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
